--- a/www/static/locale/ua.json
+++ b/www/static/locale/ua.json
@@ -1,63 +1,63 @@
-{
+﻿{
     "locale": "Русский",
     "categories": [
         {
             "id": 0,
-            "name": "Бытовая техника"
+            "name": "Побутова техніка"
         },
         {
             "id": 1,
-            "name": "Все для дома и сада"
+            "name": "Все для дому та саду"
         },
         {
             "id": 2,
-            "name": "Все для транспорта"
+            "name": "Все для транспорту"
         },
         {
             "id": 3,
-            "name": "Детский мир"
+            "name": "Дитячий світ"
         },
         {
             "id": 4,
-            "name": "Домашние животные"
+            "name": "Домашні тварини"
         },
         {
             "id": 5,
-            "name": "Компьютеры и телефоны"
+            "name": "Комп'ютери та телефони"
         },
         {
             "id": 6,
-            "name": "Одежда, аксессуары"
+            "name": "Одяг, аксесуари"
         },
         {
             "id": 7,
-            "name": "Помощь"
+            "name": "Допомога"
         },
         {
             "id": 8,
-            "name": "Работа"
+            "name": "Робота"
         },
         {
             "id": 9,
-            "name": "Услуги"
+            "name": "Послуги"
         },
         {
             "id": 10,
-            "name": "Хобби и спорт"
+            "name": "Хоббі та спорт"
         }
     ],
     "frontend": {
-        "newAdvert": "Новое объявление",
-        "login": "Войти",
-        "register": "Зарегестрироваться"
+        "newAdvert": "Нове оголошення",
+        "login": "Ввійти",
+        "register": "Реєстрація"
     },
     "errors": {
         "200" : "ОК",
-        "412" : "Форма не прошла валидацию",
-        "429" : "Вы добавили максимальное количество объявлений в день.",
-        "511" : "Неверные логин и пароль.",
-        "500" : "Ошибка SQL запроса.",
-        "503" : "Ошибка подключения к SQL серверу."
+        "412" : "Форма не пройшла валідацію",
+        "429" : "Ви додали максимальну кількість оголошень за день.",
+        "511" : "Нерпавильний логін або пароль",
+        "500" : "Помилка SQL запиту.",
+        "503" : "Помилка підключення до SQL сервера."
     }
 
 }
