--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -19,12 +19,20 @@
         "register": "Зарегестрироваться"
     },
     "errors": {
-        "200" : "ОК",
-        "412" : "Форма не прошла валидацию",
-        "429" : "Вы добавили максимальное количество объявлений в день.",
-        "511" : "Неверные логин и пароль.",
-        "500" : "Ошибка SQL запроса.",
-        "503" : "Ошибка подключения к SQL серверу."
+        "server":{
+            "200" : "ОК",
+            "412" : "Форма не прошла валидацию",
+            "429" : "Вы добавили максимальное количество объявлений в день.",
+            "511" : "Неверные логин и пароль.",
+            "500" : "Ошибка SQL запроса.",
+            "503" : "Ошибка подключения к SQL серверу."
+        },
+        "client":{
+            "emptyFild":        "Поле не заполненно.",
+            "failedValidate":   "Поле %field% не может быть ратифицировано.",
+            "successAdded":     "Объявление успешно добавлено.",
+            "failedSend":       "Ошибка при попытке добавить объявления."
+        }
     }
 
 }
