--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -19,12 +19,20 @@
         "register": "Реєстрація"
     },
     "errors": {
-        "200" : "ОК",
-        "412" : "Форма не пройшла валідацію",
-        "429" : "Ви додали максимальну кількість оголошень за день.",
-        "511" : "Нерпавильний логін або пароль",
-        "500" : "Помилка SQL запиту.",
-        "503" : "Помилка підключення до SQL сервера."
+        "server":{
+            "200" : "ОК",
+            "412" : "Форма не пройшла валідацію",
+            "429" : "Ви додали максимальну кількість оголошень за день.",
+            "511" : "Нерпавильний логін або пароль",
+            "500" : "Помилка SQL запиту.",
+            "503" : "Помилка підключення до SQL сервера."
+        },
+        "client":{
+            "emptyFild":        "Поле не заповнене.",
+            "failedValidate":   "Поле %field% не може бути ратифіковане.",
+            "successAdded":     "Оголошення успішно додано.",
+            "failedSend":       "Помилка при спробі додати оголошення."
+        }
     }
 
 }
