--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -16,12 +16,12 @@
     "frontend": {
         "newAdvert": "Новое объявление",
         "login": "Войти",
-        "register": "Зарегестрироваться"
+        "register": "Зарегистрироваться"
     },
     "errors": {
         "server":{
             "200" : "ОК",
-            "412" : "Форма не прошла валидацию",
+            "412" : "Форма не прошла валидацию.",
             "429" : "Вы добавили максимальное количество объявлений в день.",
             "511" : "Неверные логин и пароль.",
             "500" : "Ошибка SQL запроса.",
@@ -34,5 +34,4 @@
             "failedSend":       "Ошибка при попытке добавить объявления."
         }
     }
-
 }
