--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -21,9 +21,9 @@
     "errors": {
         "server":{
             "200" : "ОК",
-            "412" : "Форма не пройшла валідацію",
+            "412" : "Форма не пройшла валідацію.",
             "429" : "Ви додали максимальну кількість оголошень за день.",
-            "511" : "Нерпавильний логін або пароль",
+            "511" : "Нерпавильний логін або пароль.",
             "500" : "Помилка SQL запиту.",
             "503" : "Помилка підключення до SQL сервера."
         },
@@ -34,5 +34,4 @@
             "failedSend":       "Помилка при спробі додати оголошення."
         }
     }
-
 }
