--- a/www/static/locale/en.locale.json
+++ b/www/static/locale/en.locale.json
@@ -20,6 +20,9 @@
         "backToMain":   "Back to main",
         "footer":       "Copyright no one at all. Go to town.",
 
+        "username":     "Username",
+        "password":     "Password",
+
         "title":        "Title",
         "description":  "Description",
         "endDate":      "End Date",
