--- a/www/static/locale/en.locale.json
+++ b/www/static/locale/en.locale.json
@@ -1,36 +1,37 @@
 {
     "locale": "English",
     "categories": [
-        {   "id": 0, "name": "Home electronics"         },
-        {   "id": 1, "name": "Gardening"                },
-        {   "id": 2, "name": "Automotive"               },
-        {   "id": 3, "name": "Kids toys"                },
-        {   "id": 4, "name": "Pets"                     },
-        {   "id": 5, "name": "Computers"                },
-        {   "id": 6, "name": "Fashion"                  },
-        {   "id": 7, "name": "Help needed"              },
-        {   "id": 8, "name": "Work"                     },
-        {   "id": 9, "name": "Services"                 },
-        {   "id": 10, "name": "Hobby"                   }
+        {   "id": 0,  "name": "Home electronics"         },
+        {   "id": 1,  "name": "Gardening"                },
+        {   "id": 2,  "name": "Automotive"               },
+        {   "id": 3,  "name": "Kids toys"                },
+        {   "id": 4,  "name": "Pets"                     },
+        {   "id": 5,  "name": "Computers"                },
+        {   "id": 6,  "name": "Fashion"                  },
+        {   "id": 7,  "name": "Help needed"              },
+        {   "id": 8,  "name": "Work"                     },
+        {   "id": 9,  "name": "Services"                 },
+        {   "id": 10, "name": "Hobby"                    }
     ],
     "frontend": {
-        "newAdvert":    "New Advert",
-        "login":        "Login",
-        "register":     "Register",
-        "backToMain":   "Back to main",
-        "footer":       "Copyright no one at all. Go to town.",
+        "header"        :    "Kreved.co",
+        "newAdvert"     :    "New Advert",
+        "login"         :    "Login",
+        "register"      :    "Register",
+        "backToMain"    :    "Back to main",
+        "footer"        :    "Copyright no one at all. Go to town.",
 
-        "username":     "Username",
-        "password":     "Password",
+        "username"      :    "Username",
+        "password"      :    "Password",
 
-        "title":        "Title",
-        "description":  "Description",
-        "endDate":      "End Date",
-        "date":         "Date",
-        "category":     "Category",
-        "email":        "Email",
-        "phone":        "Phone",
-        "submit":       "Submit"
+        "title"         :    "Title",
+        "description"   :    "Description",
+        "endDate"       :    "End Date",
+        "date"          :    "Date",
+        "category"      :    "Category",
+        "email"         :    "Email",
+        "phone"         :    "Phone",
+        "submit"        :    "Submit"
     },
     "errors": {
         "server":{
