--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -1,36 +1,37 @@
 {
     "locale": "Русский",
     "categories": [
-        {   "id": 0, "name": "Бытовая техника"          },
-        {   "id": 1, "name": "Все для дома и сада"      },
-        {   "id": 2, "name": "Все для транспорта"       },
-        {   "id": 3, "name": "Детский мир"              },
-        {   "id": 4, "name": "Домашние животные"        },
-        {   "id": 5, "name": "Компьютеры и телефоны"    },
-        {   "id": 6, "name": "Одежда, аксессуары"       },
-        {   "id": 7, "name": "Помощь"                   },
-        {   "id": 8, "name": "Работа"                   },
-        {   "id": 9, "name": "Услуги"                   },
-        {   "id": 10, "name": "Хобби и спорт"           }
+        {   "id": 0,  "name": "Бытовая техника"          },
+        {   "id": 1,  "name": "Все для дома и сада"      },
+        {   "id": 2,  "name": "Все для транспорта"       },
+        {   "id": 3,  "name": "Детский мир"              },
+        {   "id": 4,  "name": "Домашние животные"        },
+        {   "id": 5,  "name": "Компьютеры и телефоны"    },
+        {   "id": 6,  "name": "Одежда, аксессуары"       },
+        {   "id": 7,  "name": "Помощь"                   },
+        {   "id": 8,  "name": "Работа"                   },
+        {   "id": 9,  "name": "Услуги"                   },
+        {   "id": 10, "name": "Хобби и спорт"            }
     ],
     "frontend": {
-        "newAdvert": "Новое объявление",
-        "login": "Войти",
-        "register": "Зарегистрироваться",
-        "backToMain":   "На главную",
-        "footer":       "Copyright no one at all. Go to town.",
+        "header"        :    "Кревед.ко",
+        "newAdvert"     :    "Новое объявление",
+        "login"         :    "Войти",
+        "register"      :    "Зарегистрироваться",
+        "backToMain"    :    "На главную",
+        "footer"        :    "Copyright no one at all. Go to town.",
 
-        "username":     "Имя пользователя",
-        "password":     "Пароль",
+        "username"      :    "Имя пользователя",
+        "password"      :    "Пароль",
 
-        "title":        "Название",
-        "description":  "Описание",
-        "endDate":      "Конец объявления",
-        "date":         "Дата",
-        "category":     "Категория",
-        "email":        "Имейл",
-        "phone":        "Номер телефона",
-        "submit":       "Добавить"
+        "title"         :    "Название",
+        "description"   :    "Описание",
+        "endDate"       :    "Конец объявления",
+        "date"          :    "Дата",
+        "category"      :    "Категория",
+        "email"         :    "Имейл",
+        "phone"         :    "Номер телефона",
+        "submit"        :    "Добавить"
     },
     "errors": {
         "server":{
