--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -14,23 +14,24 @@
         {   "id": 10, "name": "Хоббі та спорт"          }
     ],
     "frontend": {
-        "newAdvert": "Нове оголошення",
-        "login": "Вхід",
-        "register": "Реєстрація",
-        "backToMain":   "На главную",
-        "footer":       "Copyright no one at all. Go to town.",
+        "header"        :    "Кревед.ко",
+        "newAdvert"     :    "Нове оголошення",
+        "login"         :    "Вхід",
+        "register"      :    "Реєстрація",
+        "backToMain"    :    "На главную",
+        "footer"        :    "Copyright no one at all. Go to town.",
 
-        "username":     "Ім'я користувача",
-        "password":     "Пароль",
+        "username"      :    "Ім'я користувача",
+        "password"      :    "Пароль",
 
-        "title":        "Назва",
-        "description":  "Опис",
-        "endDate":      "Кінець оголошення",
-        "date":         "Дата",
-        "category":     "Категорія",
-        "email":        "Електронна пошта",
-        "phone":        "Номер телефону",
-        "submit":       "Додати"
+        "title"         :    "Назва",
+        "description"   :    "Опис",
+        "endDate"       :    "Кінець оголошення",
+        "date"          :    "Дата",
+        "category"      :    "Категорія",
+        "email"         :    "Електронна пошта",
+        "phone"         :    "Номер телефону",
+        "submit"        :    "Додати"
     },
     "errors": {
         "server":{
