--- a/www/static/locale/en.locale.json
+++ b/www/static/locale/en.locale.json
@@ -31,6 +31,7 @@
         "category"      :    "Category",
         "email"         :    "Email",
         "phone"         :    "Phone",
+        "dropzone"      :    "Drop image here",
         "submit"        :    "Submit"
     },
     "errors": {
