--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -31,6 +31,7 @@
         "category"      :    "Категория",
         "email"         :    "Имейл",
         "phone"         :    "Номер телефона",
+        "dropzone"      :    "Drop image here",
         "submit"        :    "Добавить"
     },
     "errors": {
