--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -44,10 +44,11 @@
             "503" : "Ошибка подключения к SQL серверу."
         },
         "client":{
-            "emptyField":       "Поле не заполненно.",
-            "failedValidate":   "Поле %field% не может быть ратифицировано.",
-            "successAdded":     "Объявление успешно добавлено.",
-            "failedSend":       "Ошибка при попытке добавить объявления."
+            "emptyField"        :    "Поле не заполненно.",
+            "failedValidate"    :    "Поле %field% не может быть ратифицировано.",
+            "successAdded"      :    "Объявление успешно добавлено.",
+            "failedSend"        :    "Ошибка при попытке добавить объявления.",
+            "imageOnly"         :    "Images only allowed."
         }
     }
 }
