--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -1,4 +1,4 @@
-﻿{
+﻿{   
     "locale": "Українська",
     "categories": [
         {   "id": 0, "name": "Побутова техніка"         },
@@ -44,10 +44,11 @@
             "503" : "Помилка підключення до SQL сервера."
         },
         "client":{
-            "emptyField":       "Поле не заповнене.",
-            "failedValidate":   "Поле %field% не може бути ратифіковане.",
-            "successAdded":     "Оголошення успішно додано.",
-            "failedSend":       "Помилка при спробі додати оголошення."
+            "emptyField"        :    "Поле не заповнене.",
+            "failedValidate"    :    "Поле %field% не може бути ратифіковане.",
+            "successAdded"      :    "Оголошення успішно додано.",
+            "failedSend"        :    "Помилка при спробі додати оголошення.",
+            "imageOnly"         :    "Images only allowed."
         }
     }
 }
