Main page(vs bugs) and renamed header from Krevedco to Free adverts

--- a/www/static/locale/en.locale.json
+++ b/www/static/locale/en.locale.json
@@ -14,7 +14,7 @@
         {   "id": 10, "name": "Hobby"                    }
     ],
     "frontend": {
-        "header"        :    "Kreved.co",
+        "header"        :    "Free adverts",
         "newAdvert"     :    "New Advert",
         "login"         :    "Login",
         "register"      :    "Register",
