--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -14,7 +14,7 @@
         {   "id": 10, "name": "Хоббі та спорт"          }
     ],
     "frontend": {
-        "header"        :    "Кревед.ко",
+        "header"        :    "Free adverts",
         "newAdvert"     :    "Нове оголошення",
         "login"         :    "Вхід",
         "register"      :    "Реєстрація",
