--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -40,7 +40,13 @@
         "edit"          :    "Редактировать",
         "users"         :    "Пользователи",
         "adverts"       :    "Объявления",
-        
+        "backToMain"    :    "На главную",
+        "username"      :    "Имя пользователя",
+        "areYouSure"    :    "Вы действительно хотите удалить данное объявление?",
+        "yes"           :    "Да",
+        "no"            :    "НЕТ",
+
+
         "title"         :    "Название",
         "description"   :    "Описание",
         "endDate"       :    "Конец объявления",
