--- a/www/static/locale/en.locale.json
+++ b/www/static/locale/en.locale.json
@@ -26,6 +26,7 @@
         "password"      :    "Password",
 
         "title"         :    "Title",
+        "publish"       :    "Published on",
         "description"   :    "Description",
         "endDate"       :    "End Date",
         "date"          :    "Date",
