--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -26,6 +26,7 @@
         "password"      :    "Пароль",
 
         "title"         :    "Назва",
+        "publish"       :    "Опубліковано :",
         "description"   :    "Опис",
         "endDate"       :    "Кінець оголошення",
         "date"          :    "Дата",
