--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -26,6 +26,7 @@
         "password"      :    "Пароль",
 
         "title"         :    "Название",
+        "publish"       :    "Опубликовано :",
         "description"   :    "Описание",
         "endDate"       :    "Конец объявления",
         "date"          :    "Дата",
