LOCALES:  - Changed locale item publish -> publishedOn  - Added endingDate  - Added Russian, English, Ukrainian translations.
JS:
 - Added translations to form generation.

ISSUES:
 - Check endingDate UA translation.

--- a/www/static/locale/en.locale.json
+++ b/www/static/locale/en.locale.json
@@ -22,11 +22,13 @@
         "backToMain"    :    "Back to main",
         "footer"        :    "Copyright no one at all. Go to town.",
 
+        "published"     :    "Published on",
+        "ending"        :    "Ending date",
+
         "username"      :    "Username",
         "password"      :    "Password",
 
         "title"         :    "Title",
-        "publish"       :    "Published on",
         "description"   :    "Description",
         "endDate"       :    "End Date",
         "date"          :    "Date",
