--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -1,17 +1,17 @@
 ﻿{   
     "locale": "Українська",
     "categories": [
-        {   "id": 0, "name": "Побутова техніка"         },
-        {   "id": 1, "name": "Все для дому та саду"     },
-        {   "id": 2, "name": "Все для транспорту"       },
-        {   "id": 3, "name": "Дитячий світ"             },
-        {   "id": 4, "name": "Домашні тварини"          },
-        {   "id": 5, "name": "Комп'ютери та телефони"   },
-        {   "id": 6, "name": "Одяг, аксесуари"          },
-        {   "id": 7, "name": "Допомога"                 },
-        {   "id": 8, "name": "Робота"                   },
-        {   "id": 9, "name": "Послуги"                  },
-        {   "id": 10, "name": "Хоббі та спорт"          }
+        {   "id": 0,  "name": "Побутова техніка"         },
+        {   "id": 1,  "name": "Все для дому та саду"     },
+        {   "id": 2,  "name": "Все для транспорту"       },
+        {   "id": 3,  "name": "Дитячий світ"             },
+        {   "id": 4,  "name": "Домашні тварини"          },
+        {   "id": 5,  "name": "Комп'ютери та телефони"   },
+        {   "id": 6,  "name": "Одяг, аксесуари"          },
+        {   "id": 7,  "name": "Допомога"                 },
+        {   "id": 8,  "name": "Робота"                   },
+        {   "id": 9,  "name": "Послуги"                  },
+        {   "id": 10, "name": "Хоббі та спорт"           }
     ],
     "frontend": {
         "header"        :    "Free adverts",
@@ -22,11 +22,13 @@
         "backToMain"    :    "На головну",
         "footer"        :    "Copyright no one at all. Go to town.",
 
+        "publishedOn"   :    "Опубліковано :",
+        "endingDate"    :    "Закінчуется :",
+
         "username"      :    "Ім'я користувача",
         "password"      :    "Пароль",
 
         "title"         :    "Назва",
-        "publish"       :    "Опубліковано :",
         "description"   :    "Опис",
         "endDate"       :    "Кінець оголошення",
         "date"          :    "Дата",
