--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -22,8 +22,8 @@
         "backToMain"    :    "На головну",
         "footer"        :    "Copyright no one at all. Go to town.",
 
-        "publishedOn"   :    "Опубліковано :",
-        "endingDate"    :    "Закінчуется :",
+        "publishedOn"   :    "Опубліковано",
+        "endingDate"    :    "Закінчуется",
 
         "username"      :    "Ім'я користувача",
         "password"      :    "Пароль",
