Translated loading animation.

--- a/www/static/locale/en.locale.json
+++ b/www/static/locale/en.locale.json
@@ -25,6 +25,8 @@
         "publishedOn"   :    "Published on",
         "endingDate"    :    "Ending date",
 
+        "loadingAnim"   :    "Loading",
+
         "username"      :    "Username",
         "password"      :    "Password",
 
