Added input translation. Added search locale.

--- a/www/static/locale/en.locale.json
+++ b/www/static/locale/en.locale.json
@@ -17,6 +17,7 @@
         "header"        :    "Free adverts",
         "moto"          :    "Free adverts for you. Always.",
         "newAdvert"     :    "New Advert",
+        "search"        :    "Search",
         "login"         :    "Login",
         "register"      :    "Register",
         "backToMain"    :    "Back to main",
