--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -17,6 +17,7 @@
         "header"        :    "Free adverts",
         "moto"          :    "Бесплатные объявления для вас. Всегда.",
         "newAdvert"     :    "Новое объявление",
+        "search"        :    "Поиск",
         "login"         :    "Войти",
         "register"      :    "Зарегистрироваться",
         "backToMain"    :    "На главную",
