--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -17,6 +17,7 @@
         "header"        :    "Free adverts",
         "moto"          :    "Безкоштовні оголошення для вас. Завжди.",
         "newAdvert"     :    "Нове оголошення",
+        "search"        :    "Пошук",
         "login"         :    "Вхід",
         "register"      :    "Реєстрація",
         "backToMain"    :    "На головну",
