--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -75,8 +75,10 @@
             "emptyField"        :    "Поле не заполненно.",
             "failedValidate"    :    "Поле %field% не может быть ратифицировано.",
             "successAdded"      :    "Объявление успешно добавлено.",
+            "successDelete"     :    "Объявление успешно удалено.",
             "failedSend"        :    "Ошибка при попытке добавить объявления.",
-            "imageOnly"         :    "Images only allowed."
+            "failedDelete"      :    "Ошибка при попытке удалить объявления.",
+            "imageOnly"         :    "Только картинки ты мудак."
         }
     }
 }
