--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -76,7 +76,7 @@
             "failedValidate"    :    "Поле %field% не может быть ратифицировано.",
             "successAdded"      :    "Объявление успешно добавлено.",
             "failedSend"        :    "Ошибка при попытке добавить объявления.",
-            "imageOnly"         :    "Images only allowed."
+            "imageOnly"         :    "К обьявлению можно прикреплять только изображения."
         }
     }
 }
