--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -76,7 +76,7 @@
             "failedValidate"    :    "Поле %field% не може бути ратифіковане.",
             "successAdded"      :    "Оголошення успішно додано.",
             "failedSend"        :    "Помилка при спробі додати оголошення.",
-            "imageOnly"         :    "Images only allowed."
+            "imageOnly"         :    "До оголошенню дозволено прикріпляти тільки зображення."
         }
     }
 }
