Added new advert adding for admin.

--- a/www/static/locale/en.locale.json
+++ b/www/static/locale/en.locale.json
@@ -52,6 +52,8 @@
         "yes"           :    "Yes",
         "no"            :    "NO",
 
+        "newAdvert"     :    "New Advert",
+        
         "title"         :    "Title",
         "description"   :    "Description",
         "endDate"       :    "End Date",
