--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -52,6 +52,8 @@
         "yes"           :    "Да",
         "no"            :    "НЕТ",
 
+        "newAdvert"     :    "Новое объявление",
+
         "title"         :    "Название",
         "description"   :    "Описание",
         "endDate"       :    "Конец объявления",
