--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -52,6 +52,8 @@
         "yes"           :    "Так",
         "no"            :    "Ні",
 
+        "newAdvert"     :    "Нове оголошення",
+
         "title"         :    "Назва",
         "description"   :    "Опис",
         "endDate"       :    "Кінець оголошення",
