--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -47,10 +47,15 @@
         "users"         :    "Пользователи",
         "adverts"       :    "Объявления",
         "backToMain"    :    "На главную",
-        "username"      :    "Имя пользователя",
-        "areYouSure"    :    "Вы действительно хотите удалить данное объявление?",
         "yes"           :    "Да",
         "no"            :    "НЕТ",
+
+        "areYouSureAdv" :    "Вы действительно хотите удалить данное объявление?",
+        "areYouSureUser":    "Вы действительно хотите удалить данного пользователя?",
+
+        "username"      :    "Имя пользователя",
+        "password"      :    "Пароль",
+        "rePassword"    :    "Повторите пароль",
 
         "newAdvert"     :    "Новое объявление",
 
