--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -47,10 +47,16 @@
         "users"         :    "Користувачі",
         "adverts"       :    "Оголошення",
         "backToMain"    :    "На головну",
-        "username"      :    "Ім'я користувача",
-        "areYouSure"    :    "Are you sure?",
         "yes"           :    "Так",
         "no"            :    "Ні",
+
+        "areYouSureAdv" :    "Ви дійсно хочете видалити дане оголошення?",
+        "areYouSureUser":    "Ви дійсно хочете видалити даного користувача?",
+
+        "username"      :    "Ім'я користувача",
+        "password"      :    "Пароль",
+        "rePassword"    :    "Повторіть пароль",
+
 
         "newAdvert"     :    "Нове оголошення",
 
