Added user registration.

--- a/www/static/locale/en.locale.json
+++ b/www/static/locale/en.locale.json
@@ -51,9 +51,11 @@
         "areYouSureAdv" :    "Are you sure?",
         "areYouSureUser":    "Are you sure?",
 
+        "newUser"       :    "New User",
         "username"      :    "Username",
         "password"      :    "Password",
         "rePassword"    :    "Password again",
+        "register"      :    "Register",
 
         "yes"           :    "Yes",
         "no"            :    "NO",
