--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -53,9 +53,11 @@
         "areYouSureAdv" :    "Вы действительно хотите удалить данное объявление?",
         "areYouSureUser":    "Вы действительно хотите удалить данного пользователя?",
 
+        "newUser"       :    "Новый пользователь",
         "username"      :    "Имя пользователя",
         "password"      :    "Пароль",
-        "rePassword"    :    "Повторите пароль",
+        "rePassword"    :    "Еще раз",
+        "register"      :    "Зарегистрировать",
 
         "newAdvert"     :    "Новое объявление",
 
