--- a/www/static/locale/ua.locale.json
+++ b/www/static/locale/ua.locale.json
@@ -53,10 +53,11 @@
         "areYouSureAdv" :    "Ви дійсно хочете видалити дане оголошення?",
         "areYouSureUser":    "Ви дійсно хочете видалити даного користувача?",
 
+        "newUser"       :    "Новий користувач",
         "username"      :    "Ім'я користувача",
         "password"      :    "Пароль",
         "rePassword"    :    "Повторіть пароль",
-
+        "register"      :    "Зареєструвати",
 
         "newAdvert"     :    "Нове оголошення",
 
