--- a/www/static/locale/en.locale.json
+++ b/www/static/locale/en.locale.json
@@ -27,6 +27,8 @@
         "endingDate"    :    "Ending date",
 
         "loadingAnim"   :    "Loading",
+        "Success"       :    "Success",
+        "Failed"        :    "Failed",
 
         "username"      :    "Username",
         "password"      :    "Password",
