--- a/www/static/locale/ru.locale.json
+++ b/www/static/locale/ru.locale.json
@@ -27,6 +27,8 @@
         "endingDate"    :    "Заканчиваеться",
 
         "loadingAnim"   :    "Загрузка",
+        "Success"       :    "Успех",
+        "Failed"       :    "Провал",
 
         "username"      :    "Имя пользователя",
         "password"      :    "Пароль",
